--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -31,11 +31,6 @@
     justify-content: space-evenly;
     align-items: center;
 
-    Button {
-      margin: 0 1rem;
-    }
-
-
     .one {
       animation: appear 0.75s ease;
     }
