--- a/src/interface/Button.scss
+++ b/src/interface/Button.scss
@@ -1,7 +1,7 @@
 @import '../index.scss';
 
 .primary {
-  display: flex;
+  box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
   color: #fff;
@@ -36,14 +36,14 @@
   font-size: 0.85rem;
   width: 6rem;
   height: 2.25rem;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .sm {
   @extend .primary;
   width: 12rem;
   height: 2.75rem;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .md {
