--- a/src/interface/Card.scss
+++ b/src/interface/Card.scss
@@ -45,17 +45,18 @@
       align-items: center;
     }
 
-    .card-icons>a {
-      padding: 0 0.20rem;
-    }
-
-    .card-icons>a {
+    .card-icons a {
+      font-size: 1.25rem;
+      padding: 0;
+      margin: 0 0.33rem;
       text-decoration: none;
-      color: $button-color;
+      color: $heading-font-color-l2;
+      transition: transform 0.25s ease
     }
 
-    .card-icons>a:hover {
+    .card-icons a:hover {
       color: $button-color-hover;
+      transform: translateY(-0.15rem)
     }
   }
 
@@ -72,9 +73,9 @@
   }
 
   .tech span {
-    font-size: 0.65rem;
+    font-size: 0.7rem;
     margin: 0.25rem 0.5rem 0.25rem 0;
-    padding: 0.25rem 0.5rem;
+    padding: 0.5rem 0.75rem;
     border: 1px solid $button-color-hover
   }
 }
